<resources>
    <string name="app_name">Autenticacion</string>
    <string name="action_settings">Settings</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>
    <string name="verify_email">Verify email</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="name_userpassword">Autenticación usuario-contraseña</string>


    <string name="google_title_text">Google Sign In</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>


    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_app_id">2630764323604732</string>
    <string name="fb_login_protocol_scheme">fb2630764323604732</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="title_activity_twitter_sign_in">twitterSignIn</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="twitter_consumer_key">CAYaaNJ8tUsupEEduYdoYp0Tw</string>
    <string name="twitter_consumer_secret">mGdb1NpyoMcTPDsQXtx7ScCjaKZ9MuydxV3SitEy5PeL1U6b8Q</string>


    <string name="phone_title_text">Phone Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_in">Signed In</string>


</resources>
